24-project-II/kubernetes/qa-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qa-ui-service
  namespace: production
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: qa-ui
