24-project-II/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # This rewrites the URL path
    nginx.ingress.kubernetes.io/proxy-set-headers: "Upgrade,Connection"  # WebSocket support
spec:
  rules:
    - host: local.production
      http:
        paths:
          - path: /api(/|$)(.*)  # This regex captures paths starting with /api and rewrites correctly
            pathType: ImplementationSpecific
            backend:
              service:
                name: qa-api-service
                port:
                  number: 7777
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qa-ui-service
                port:
                  number: 3000
          - path: /ws/
            pathType: Prefix
            backend:
              service:
                name: websocket-service
                port:
                  number: 7788
